--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
+  firebase_database: ^10.2.6
+  cloud_firestore: ^4.9.2
+  uuid: ^4.1.0
 
 dev_dependencies:
   flutter_localizations:
