--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_database: ^10.2.6
   cloud_firestore: ^4.9.2
   uuid: ^4.1.0
+  firebase_auth: ^4.10.0
 
 dev_dependencies:
   flutter_localizations:
