--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cloud_firestore: ^4.9.2
   uuid: ^4.1.0
   firebase_auth: ^4.10.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_localizations:
